[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["sam_jlab_vim/labextension/static/style.js"]
ensured-targets = ["sam_jlab_vim/labextension/static/style.js", "sam_jlab_vim/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["sam_jlab_vim/labextension/**", "yarn.lock", ".*", "package-lock.json"]
